Bug 717521 - Limit pre-rendering to max 4096 x 4096 pixels (post-transform) to avoid hang.  r=tnikkel a=akeybl